# Native-QuasarClient

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  build-mingw.bat  build-msvc-140-debug.bat  readme.md
include/: helpers.h  membuf.h  packet.h  packet_factory.h  primitives.h  quasar_client.h  quicklz.h  settings.h  stdafx.h  system_info.h  targetver.h
include/packets/: client_packets.h  packet.h  server_packets.h
include/tools/: aes_crypt.h  deserializer.h  filesys_mgr.h  primitives.h  proc_mgr.h  quicklz_helper.h  serializer.h  system_info.h  wmi_srvc.h
src/: NativeClient.cpp  helpers.cpp  packet.cpp  packet_factory.cpp  primitives.cpp  quasar_client.cpp  quicklz.cpp  stdafx.cpp
src/client_packets/: get_authentication_response.cpp  get_directory_response.cpp  get_drives_response.cpp  get_processes_response.cpp  set_status.cpp
src/server_packets/: do_process_kill.cpp  do_process_start.cpp  do_show_message_box.cpp  do_shutdown_action.cpp  get_authentication.cpp  get_directory.cpp  get_drives.cpp  get_processes.cpp
src/tools/: aes_crypt.cpp  filesys_mgr.cpp  primitives.cpp  proc_mgr.cpp  quicklz_helper.cpp  serializer.cpp  system_info.cpp  wmi_srvc.cpp
